feat: add styles for promo page and modal and adaptive layout for promo page

--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -3,11 +3,16 @@ $color-text-light: #727272;
 $color-text-accent: #1f4284;
 $color-text-contrast: #ffffff;
 
+$color-background-lighter: #f0f4fc;
 $color-background-light: #ebf0fa;
+$color-background-lightish: #d7e2f6;
 $color-background-accent: #244c98;
 $color-background-general: #ffffff;
 
+$font-main: Manrope, Arial, Helvetica, sans-serif;
+
 $bottom-box-shadow: 0 2px 2px #0000001a;
 
-$border-radius-small: 10px;
+$border-radius-small: 4px;
+$border-radius-medium: 10px;
 $border-radius-large: 60px;
