--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,25 @@
 @use './base/fonts' as *;
 @use './components/button' as *;
+@use './components/modal' as *;
+@use './components/form' as *;
 @use './abstract/variables' as *;
+@use './abstract/mixins' as *;
 @use './layout/basic' as *;
+@use './layout/promo' as *;
 @use './base/text' as *;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
-  font-family: Manrope, Arial, Helvetica, sans-serif;
+  margin: 0;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  font-family: $font-main;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
