--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,7 +1,10 @@
 @use './../abstract/variables' as *;
+@use './../abstract/mixins' as *;
 
 .form {
   padding: 80px 24px 24px;
+  max-width: 500px;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -33,6 +36,10 @@
     &:last-of-type {
       margin-bottom: 24px;
     }
+
+    @include max-768 {
+      font-size: 0.9375rem;
+    }
   }
 
   &__label {
@@ -44,6 +51,10 @@
     font-size: 1.125rem;
     font-weight: 400;
     line-height: 24.59px;
+
+    @include max-768 {
+      margin-bottom: 20px;
+    }
   }
 
   &__link {
@@ -53,6 +64,11 @@
     font-weight: 500;
     line-height: 27.32px;
     color: $color-background-accent;
+
+    @include max-768 {
+      font-size: 1.125rem;
+      margin-bottom: 26px;
+    }
   }
 
   &__button {
