--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -2,9 +2,16 @@
 
 .modal {
   &__wrapper {
-    // display: none;
+    display: none;
     position: relative;
     background-color: $color-background-lighter;
+    border-radius: $border-radius-medium;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__close-btn {
@@ -21,5 +28,12 @@
 
     background-color: $color-background-general;
     border-radius: $border-radius-medium;
+
+    transition: 0.3s;
+
+    &:hover {
+      cursor: pointer;
+      filter: brightness(0.9);
+    }
   }
 }
