feat: add open and close modal functionality

--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -9,6 +9,8 @@ $color-background-lightish: #d7e2f6;
 $color-background-accent: #244c98;
 $color-background-general: #ffffff;
 
+$color-border-dark: #323232;
+
 $font-main: Manrope, Arial, Helvetica, sans-serif;
 
 $bottom-box-shadow: 0 2px 2px #0000001a;
