--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -1,11 +1,56 @@
 @use './../abstract/variables' as *;
 
 .modal {
-  &__wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+
+  display: none;
+
+  background-color: #ffffffda;
+
+  &.active {
+    display: block;
+    animation: fadeIn 0.5s ease-out;
+  }
+
+  &.inactive {
     display: none;
+    animation: fadeOut 0.5s ease-out;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      display: block;
+      opacity: 0;
+    }
+
+    100% {
+      display: block;
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeOut {
+    0% {
+      display: block;
+      opacity: 1;
+    }
+
+    100% {
+      display: none;
+      opacity: 0;
+    }
+  }
+
+  &__wrapper {
     position: relative;
     background-color: $color-background-lighter;
     border-radius: $border-radius-medium;
+    animation: fadeIn 0.3s ease-in;
   }
 
   &__content {
